fix carousel button mobile, tab arrow mobile remove

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -714,7 +714,7 @@ a.btn,a.btn:hover,a.btn:active{border:none!important;}
 .carousel-control.left .icon::before{ content:'\e641'; position:relative; right:-0.32em; text-shadow: -3px 0 7px rgba(0,0,0, 0.10);}
 .carousel-control.right .icon::before{ content:'\e642'; position:relative; left:-0.32em; text-shadow: 3px 0 7px rgba(0,0,0, 0.10);}
 .carousel-control:hover .icon{ color:#fff;}
-.carousel-pause.btn.btn-sm { color: #888 !important; -webkit-box-shadow: 0 0 10px 0 rgba(50,50,50,0.125); box-shadow: 0 0 10px 0 rgba(50,50,50,0.125); font-size: 1em !important; text-align: center; margin: 0 50%; border-radius: 50% !important; padding: 0.55rem 0.9rem !important; width:3.2rem; height:3rem;}
+.carousel-pause.btn.btn-sm { color: #888 !important; -webkit-box-shadow: 0 0 10px 0 rgba(50,50,50,0.125); box-shadow: 0 0 10px 0 rgba(50,50,50,0.125); font-size: 0.88em !important; text-align: center; margin: 0 auto; border-radius: 50% !important;padding:0 !important; width:2.5rem; height:2.3rem; margin:.5rem;}
 .carousel .col-xs-12{ padding-left:5px;padding-right:5px;}
 
 /*.carousel-pause.btn.btn-sm:hover{ color: rgb(207, 47, 30) !important;background:#fff !important;}*/
@@ -803,7 +803,7 @@ a.btn,a.btn:hover,a.btn:active{border:none!important;}
   z-index: 1;
 }
 /* play- pause button */
-.carousel.carousel-fade .control-box-2{ position:relative; top:-2rem;}
+.carousel.carousel-fade .control-box-2{ text-align:center; position:relative; top:-2rem;}
 
 
 @media all and (transform-3d), (-webkit-transform-3d) {
@@ -2053,6 +2053,8 @@ p.modal-title{ font-size:110%;}
 
 
 @media screen and (max-width: 767px) {
+	
+	.nav-justified > li.active::before{ border-color:transparent;}
 
 				/* .titlearea .page-title { font-weight: normal; font-size:1.5em; line-height:1.5em; } */
  
@@ -2156,14 +2158,14 @@ p.modal-title{ font-size:110%;}
 @media screen and (min-width: 768px) {
 	 
 	html body.admin-menu{ margin-top:2.8rem !important;} /* adjust height of admin bar */
-
-
 	
 	.navbar-default .menu-explore{ display:none; }
 	.menu-toggle{ display:inline-block;}
 	  
 	.collections h4 { font-size:1.06em;letter-spacing: 0.25em;margin-top:8px !important;}   
   .collections ul li{ width:15%; margin-left:8%;}
+  
+  .carousel-pause.btn.btn-sm{  padding: 0.55rem 0.9rem !important; width:3.2rem; height:3rem;font-size: 1em !important;}
 }
 
 @media screen and (min-width: 850px) {
